fix: make new controller for the frontned
